# dispatcher-2

./: .gitignore  Makefile.am  README.md  configure.ac
contrib/: dispatcher2d.spec  dispatcher2d.spec.in
doc/: dispatcher2.conf
doc/conf/: ca-cert.srl  ca.cnf  client1.cnf  client2.cnf  server.cnf
src/: Makefile.am  conf.c  conf.h  dispatcher-2.1.sql  dispatcher2-config.h  dispatcher2-config.h.in  dispatcher2.c  dispatcher2.h  dispatcher2d  log.c  log.h  misc.c  misc.h  request_processor.c  request_processor.h  tables.h
testcases/: queue_data.py  resp.xml  t3.xml  test_server.py
web/: dispatcher2.py  requirements.txt  settings.py  urls.py
web/app/controllers/: __init__.py  api.py  completed_handler.py  failed_handler.py  search_handler.py
web/app/tools/: utils.py
web/app/views/: appsettings.html  completed.html  failed.html  groups.html  ready.html  requests.html  search.html  settings.html
web/templates/: about.html  base.html  completed.html  failed.html  layout.html  logon.html  ready.html  requests.html  search.html  settings.html  start.html  users.html
